[package]
name = "exo_task"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Hulme <https://github.com/ajh123>"]
description = "A lightweight async task executor for bare metal (or any) systems"
documentation = "https://docs.rs/exo_task"
repository = "https://github.com/gtmos-os/exo_task"
license = "MIT OR Apache-2.0"
keywords = ["async", "executor", "no_std", "embedded", "bare-metal"]
categories = ["asynchronous", "no-std", "embedded"]
readme = "README.md"
rust-version = "1.86.0"

[features]
x86_64_support = ["x86_64"]

[dependencies]
x86_64 = { version = "0.15.2", optional = true }

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]
